--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,3 @@
-[build-system]
-requires = ["setuptools>=61.0", "wheel"]
-build-backend = "setuptools.build_meta"
-
 [project]
 name = "GithubStat"
 version = "1.2"
@@ -11,9 +7,7 @@ license = { text = "MIT" }
 authors = [
   { name = "Ryougaa", email = "trytoloveurself@gmail.com" }
 ]
-urls = { 
-  "Homepage" = "https://github.com/n1k4xryougaaa/GithubStat"
-}
+urls.homepage = "https://github.com/n1k4xryougaaa/GithubStat"
 dependencies = [
   "requests >=2.25.0",
   "six >=1.13.0"
